--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+                "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+             
+              
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
@@ -104,5 +107,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "7b1b1e10-ca09-43e6-a66f-f9cac6d977dc"
   }
 }
