--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@zxing/ngx-scanner": "^17.0.1",
     "bootstrap": "^5.3.3",
+    "ng-recaptcha": "^13.2.1",
+    "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -30,6 +33,7 @@
     "@angular/compiler-cli": "^17.2.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
+    "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
