--- a/package.json
+++ b/package.json
@@ -23,15 +23,24 @@
     "@angular/router": "^17.3.4",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@types/google-one-tap": "^1.2.6",
     "@zxing/ngx-scanner": "^17.0.1",
+    "angularx-qrcode": "^17.0.1",
+    "apexcharts": "^3.49.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
+    "file-saver": "^2.0.5",
+    "i18n": "^0.15.1",
     "ng-angular-popup": "^0.5.2",
+    "ng-apexcharts": "^1.10.0",
     "ng-recaptcha": "^13.2.1",
     "ngx-toastr": "^18.0.0",
     "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -39,6 +48,7 @@
     "@angular/cli": "^17.3.6",
     "@angular/compiler-cli": "^17.3.4",
     "@types/bootstrap": "^5.2.10",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/qrcode": "^1.5.5",
     "jasmine-core": "~5.1.0",
